@@ -20,6 +20,7 @@ Gem::Specification.new do |s|
 
   s.add_runtime_dependency 'asciidoctor', '~> 2.0'
   s.add_runtime_dependency 'fb2rb', '~> 0.4.0'
+  s.add_runtime_dependency 'mime-types', '~> 3.0'
 
   s.add_development_dependency 'asciidoctor-diagram', '~> 2.0'
   s.add_development_dependency 'rake', '~> 13.0'
